# Vulkan-RenderDoc-API

./: .gitignore  CMakeLists.txt
data/shaders/: triangle.frag.spv  triangle.vert.spv
src/: main.cpp
